{
  "version": 4,
  "terraform_version": "1.4.5",
  "serial": 100,
  "lineage": "7a3c032b-1d46-0db4-4814-0a69567ec5ac",
  "resources": [
    {
      "module": "module.jenkins-server",
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b6968e5c7117349a",
            "arn": "arn:aws:ec2:us-east-2:481792101255:instance/i-04f9f73bc946642d9",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04f9f73bc946642d9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "prod-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01ef60a844602e147",
            "private_dns": "ip-192-162-0-100.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.162.0.100",
            "public_dns": "ec2-18-218-155-38.us-east-2.compute.amazonaws.com",
            "public_ip": "18.218.155.38",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0aa42ba9952ff7a62",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0476943416ca144bd",
              "sg-05b6605ec86aceb85"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-014ed5f1ce3b5bb47",
            "tags": {
              "Name": "prod-Jenkins-Server-devOps"
            },
            "tags_all": {
              "Name": "prod-Jenkins-Server-devOps"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0476943416ca144bd",
              "sg-05b6605ec86aceb85"
            ]
          },
          "dependencies": [
            "module.jenkins-server.data.aws_ami.ubuntu-linux-1404",
            "module.jenkins-server.data.template_file.user_data",
            "module.security.aws_security_group.security_group_port_22",
            "module.security.aws_security_group.security_group_port_8080",
            "module.vpc.aws_subnet.public_subnet_az",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.k8-server",
      "mode": "managed",
      "type": "aws_instance",
      "name": "k8-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b6968e5c7117349a",
            "arn": "arn:aws:ec2:us-east-2:481792101255:instance/i-073dc9d33021c57db",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-073dc9d33021c57db",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "prod-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00c48ed281b521698",
            "private_dns": "ip-192-162-0-161.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.162.0.161",
            "public_dns": "ec2-18-191-178-68.us-east-2.compute.amazonaws.com",
            "public_ip": "18.191.178.68",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0791b146f328f9d18",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-05b6605ec86aceb85",
              "sg-06c48664d80e97d79"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-014ed5f1ce3b5bb47",
            "tags": {
              "Name": "prod-k8-Server-devOps"
            },
            "tags_all": {
              "Name": "prod-k8-Server-devOps"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05b6605ec86aceb85",
              "sg-06c48664d80e97d79"
            ]
          },
          "dependencies": [
            "module.k8-server.data.aws_ami.ubuntu-linux-1404",
            "module.k8-server.data.template_file.user_data",
            "module.security.aws_security_group.security_group_port_22",
            "module.security.aws_security_group.security_group_port_30000",
            "module.vpc.aws_subnet.public_subnet_az",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group_port_22",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:481792101255:security-group/sg-05b6605ec86aceb85",
            "description": "enable ssh access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "outbound access",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05b6605ec86aceb85",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "server security group",
            "name_prefix": "",
            "owner_id": "481792101255",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "prod-devOps-security_group_port_22"
            },
            "tags_all": {
              "Name": "prod-devOps-security_group_port_22"
            },
            "timeouts": null,
            "vpc_id": "vpc-04dc7138486f47ae1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group_port_30000",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:481792101255:security-group/sg-06c48664d80e97d79",
            "description": "enable port access 30000",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "outbound access",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06c48664d80e97d79",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "port 30000 access",
                "from_port": 30000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 30000
              }
            ],
            "name": "K8 server security group",
            "name_prefix": "",
            "owner_id": "481792101255",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "prod-devOps-security_group_port_30000"
            },
            "tags_all": {
              "Name": "prod-devOps-security_group_port_30000"
            },
            "timeouts": null,
            "vpc_id": "vpc-04dc7138486f47ae1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group_port_8080",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:481792101255:security-group/sg-0476943416ca144bd",
            "description": "enable port access 8080",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "outbound access",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0476943416ca144bd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "port 8080 access",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "Jenkins server security group with port 8080",
            "name_prefix": "",
            "owner_id": "481792101255",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "prod-devOps-security_group_port_8080"
            },
            "tags_all": {
              "Name": "prod-devOps-security_group_port_8080"
            },
            "timeouts": null,
            "vpc_id": "vpc-04dc7138486f47ae1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group_port_9000",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:481792101255:security-group/sg-0ba358bce098849f4",
            "description": "enable PORT 9000",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "outbound access",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ba358bce098849f4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "port 9000 access",
                "from_port": 9000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9000
              }
            ],
            "name": "sonarqube server security group",
            "name_prefix": "",
            "owner_id": "481792101255",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "prod-devOps-security_group_port_9000"
            },
            "tags_all": {
              "Name": "prod-devOps-security_group_port_9000"
            },
            "timeouts": null,
            "vpc_id": "vpc-04dc7138486f47ae1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sonarqube-server",
      "mode": "managed",
      "type": "aws_instance",
      "name": "sonarqube-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b6968e5c7117349a",
            "arn": "arn:aws:ec2:us-east-2:481792101255:instance/i-0167c9ba0226ce8b1",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0167c9ba0226ce8b1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "prod-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02647dbe93d130ecb",
            "private_dns": "ip-192-162-0-216.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.162.0.216",
            "public_dns": "ec2-18-216-3-4.us-east-2.compute.amazonaws.com",
            "public_ip": "18.216.3.4",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01d1d4a2b974449f1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-05b6605ec86aceb85",
              "sg-0ba358bce098849f4"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-014ed5f1ce3b5bb47",
            "tags": {
              "Name": "prod-Sonarqube-Server-devOps"
            },
            "tags_all": {
              "Name": "prod-Sonarqube-Server-devOps"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05b6605ec86aceb85",
              "sg-0ba358bce098849f4"
            ]
          },
          "dependencies": [
            "module.security.aws_security_group.security_group_port_22",
            "module.security.aws_security_group.security_group_port_9000",
            "module.sonarqube-server.data.aws_ami.ubuntu-linux-1404",
            "module.sonarqube-server.data.template_file.user_data",
            "module.vpc.aws_subnet.public_subnet_az",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:481792101255:internet-gateway/igw-04f3da8b10ba21e8d",
            "id": "igw-04f3da8b10ba21e8d",
            "owner_id": "481792101255",
            "tags": {
              "Name": "prod-devOps-igw"
            },
            "tags_all": {
              "Name": "prod-devOps-igw"
            },
            "vpc_id": "vpc-04dc7138486f47ae1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:481792101255:route-table/rtb-07b27e51c9dc6a33d",
            "id": "rtb-07b27e51c9dc6a33d",
            "owner_id": "481792101255",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04f3da8b10ba21e8d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "prod-devOps-Public Route Table"
            },
            "tags_all": {
              "Name": "prod-devOps-Public Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-04dc7138486f47ae1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_az_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0018ba88cf863503a",
            "route_table_id": "rtb-07b27e51c9dc6a33d",
            "subnet_id": "subnet-014ed5f1ce3b5bb47"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.public_subnet_az",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_az",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:481792101255:subnet/subnet-014ed5f1ce3b5bb47",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "192.162.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-014ed5f1ce3b5bb47",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "481792101255",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "prod-devOps-Public Subnet"
            },
            "tags_all": {
              "Name": "prod-devOps-Public Subnet"
            },
            "vpc_id": "vpc-04dc7138486f47ae1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:481792101255:vpc/vpc-04dc7138486f47ae1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.162.0.0/16",
            "default_network_acl_id": "acl-00a9d2140250803bc",
            "default_route_table_id": "rtb-0df8a6a0514e4ee88",
            "default_security_group_id": "sg-038a11e67a493d158",
            "dhcp_options_id": "dopt-0aa4d9e56ebe30e04",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04dc7138486f47ae1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0df8a6a0514e4ee88",
            "owner_id": "481792101255",
            "tags": {
              "Name": "prod-devOps-vpc"
            },
            "tags_all": {
              "Name": "prod-devOps-vpc"
            }
          }
        }
      ]
    }
  ]
}